<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nervousnet</string>
    <string name="you">YOU</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="settings">Settings</string>
    <string name="title_activity_if_this_then_that">IfThisThenThatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="If">IF</string>
    <string name="then">THEN</string>
    <string name="For">for</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contribute">Contribute to nervousnet?</string>
    <string name="contribute_long">Enable sensor logging and uploading to help nervousnet?</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="title_activity_sensor_logging_toggle">Privacy settings</string>
    <string name="title_activity_sensors_statistics">Sensor statistics</string>
    <string name="title_activity_charts_webview">Statistics</string>

    <string-array name="sensors_list">
        <item>Accelerometer</item>
        <item>Battery</item>
        <item>Connectivity</item>
        <item>Gyroscope</item>
        <item>Humidity</item>
        <item>Light</item>
        <item>Magnetic</item>
        <item>Microphone</item>
        <item>Noise</item>
        <item>Pressure</item>
        <item>Proximity</item>
        <item>Temperature</item>
    </string-array>

    
     <!-- Strings related to Virtual Sensors feature -->
    <string name="title_activity_server_details">Proxy settings</string>
    <string name="title_activity_sensor_frequency">Sensor logging interval</string>
    <string name="title_activity_main_apps">Nervousnet Virtual Sensors</string>
    
     <string name="title_activity_virtual_sensor_settings">Virtual Sensors Settings</string>
    <string name="title_activity_virtual_sensor_dialog">Virtual Sensor</string>
    <string name="title_notification">NervousNet</string>

    <!-- Strings related to Virtual Sensor Dialog -->
    <string name="empty_response">The response can not be empty.</string>
    <string name="dialog_button_submit">SUBMIT</string>
    <string name="dialog_button_ignore">IGNORE</string>
    <string name="dialog_input_hint">Other</string>

    <!-- Strings related to Virtual Sensor Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_virtual_sensor_notifications">Virtual Sensors</string>
    <string name="pref_description_virtual_sensor_notification">Virtual Sensor notifications that appear with the given intervals.
    </string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_main">Notification Intervals</string>

</resources>